--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tabler/icons-react": "^3.30.0",
     "@tanstack/react-table": "^8.21.2",
+    "@types/canvas-confetti": "^1.9.0",
     "axios": "^1.8.1",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
