--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.1.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.476.0",
