--- a/package.json
+++ b/package.json
@@ -35,14 +35,16 @@
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
     "dotenv": "^16.4.7",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.476.0",
     "motion": "^12.4.7",
-    "next": "15.1.7",
-    "next-themes": "^0.4.4",
-    "react": "^19.0.0",
+    "next": "^15.3.4",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.0",
     "react-color": "^2.19.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
